# genie-vid2pdf

./: .gitignore  README.md  pyproject.toml
genie_vid2pdf/: cli.py  converter.py
