[project]
name = "genie-vid2pdf"
version = "0.1.0"
description = "Convert local meeting recordings to PDF (screenshots + subtitles)"
requires-python = ">=3.9"
dependencies = [
    "genie-core @ git+https://github.com/Simon99/genie-core.git",
    "Pillow>=10.0",
]

[project.scripts]
genie-vid2pdf = "genie_vid2pdf.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
